syntax = "proto3";

package rpbapi;

option go_package = "relation-service/rpbapi";

service RelationService {
  rpc AddFriend(AddFriendRequest) returns (Empty) {}
  rpc RemoveFriend(RemoveFriendRequest) returns (Empty) {}
  rpc GetFriends(GetFriendsRequest) returns (GetFriendsResponse) {}
}



message Empty {}

message AddFriendRequest {
  int64 userID = 1;
  int64 friendID = 2;
}

message RemoveFriendRequest {
  int64 userID = 1;
  int64 friendID = 2;
}

message GetFriendsRequest {
  int64 userID = 1;
  enum DIRECTION {
    FIRST = 0;
    NEXT = 1;
    PREV = 2;
  }
  DIRECTION direction = 2;
  int64 userOffsetID = 3;
  int64 limit = 4;
}

message GetFriendsResponse {
  repeated int64 friends = 1;
}
